backend/logs/app-dev.log-exceptions-2025-08-25.log
[1;31m🚨 [2L-Ouest-Services] 25/08/2025 04:24:05 🚨| ⠼ ERROR    | uncaughtException: Identifier 'logger' has already been declared
/home/stive-junior/2L-Ouest-Services/backend/middleware/authMiddleware.js:18
const { logger, logError, logInfo } = require('../services/loggerService');
        ^

SyntaxError: Identifier 'logger' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1669:18)
    at Module._compile (node:internal/modules/cjs/loader:1712:20)
    at Object..js (node:internal/modules/cjs/loader:1871:10)
    at Module.load (node:internal/modules/cjs/loader:1470:32)
    at Module._load (node:internal/modules/cjs/loader:1290:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:238:24)
    at Module.require (node:internal/modules/cjs/loader:1493:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (/home/stive-junior/2L-Ouest-Services/backend/middleware/index.js:7:24)[0m
[3m╭────────────────── Métadonnées ──────────────────╮[0m
[3m│ {[0m
[3m│ [1;34m  "error": [0m[3m{},[0m
[3m│ [1;34m  "stack": [0m[3m"/home/stive-junior/2L-Ouest-Services/backend/middleware/authMiddleware.js:18\nconst { logger, logError, logInfo } = require('../services/loggerService');\n        ^\n\nSyntaxError: Identifier 'logger' has already been declared\n    at wrapSafe (node:internal/modules/cjs/loader:1669:18)\n    at Module._compile (node:internal/modules/cjs/loader:1712:20)\n    at Object..js (node:internal/modules/cjs/loader:1871:10)\n    at Module.load (node:internal/modules/cjs/loader:1470:32)\n    at Module._load (node:internal/modules/cjs/loader:1290:12)\n    at TracingChannel.traceSync (node:diagnostics_channel:322:14)\n    at wrapModuleLoad (node:internal/modules/cjs/loader:238:24)\n    at Module.require (node:internal/modules/cjs/loader:1493:12)\n    at require (node:internal/modules/helpers:152:16)\n    at Object.<anonymous> (/home/stive-junior/2L-Ouest-Services/backend/middleware/index.js:7:24)",[0m
[3m│ [1;34m  "exception": [0m[3mtrue,[0m
[3m│ [1;34m  "date": [0m[3m"Mon Aug 25 2025 04:24:05 GMT+0100 (heure normale d’Afrique de l’Ouest)",[0m
[3m│ [1;34m  "process": [0m[3m{[0m
[3m│ [1;34m    "pid": [0m[3m69705,[0m
[3m│ [1;34m    "uid": [0m[3m1000,[0m
[3m│ [1;34m    "gid": [0m[3m1000,[0m
[3m│ [1;34m    "cwd": [0m[3m"/home/stive-junior/2L-Ouest-Services/backend",[0m
[3m│ [1;34m    "execPath": [0m[3m"/home/stive-junior/.nvm/versions/node/v24.5.0/bin/node",[0m
[3m│ [1;34m    "version": [0m[3m"v24.5.0",[0m
[3m│ [1;34m    "argv": [0m[3m[[0m
[3m│       "/home/stive-junior/.nvm/versions/node/v24.5.0/bin/node",[0m
[3m│       "/home/stive-junior/2L-Ouest-Services/backend/app.js"[0m
[3m│     ],[0m
[3m│ [1;34m    "memoryUsage": [0m[3m{[0m
[3m│ [1;34m      "rss": [0m[3m114466816,[0m
[3m│ [1;34m      "heapTotal": [0m[3m56913920,[0m
[3m│ [1;34m      "heapUsed": [0m[3m34769048,[0m
[3m│ [1;34m      "external": [0m[3m2570995,[0m
[3m│ [1;34m      "arrayBuffers": [0m[3m21573[0m
[3m│     }[0m
[3m│   },[0m
[3m│ [1;34m  "os": [0m[3m{[0m
[3m│ [1;34m    "loadavg": [0m[3m[[0m
[3m│       3.28,[0m
[3m│       2.73,[0m
[3m│       2.22[0m
[3m│     ],[0m
[3m│ [1;34m    "uptime": [0m[3m81918.67[0m
[3m│   },[0m
[3m│ [1;34m  "trace": [0m[3m[[0m
[3m│     {[0m
[3m│ [1;34m      "column": [0m[3m18,[0m
[3m│ [1;34m      "file": [0m[3m"node:internal/modules/cjs/loader",[0m
[3m│ [1;34m      "function": [0m[3m"wrapSafe",[0m
[3m│ [1;34m      "line": [0m[3m1669,[0m
[3m│ [1;34m      "method": [0m[3mnull,[0m
[3m│ [1;34m      "native": [0m[3mfalse[0m
[3m│     },[0m
[3m│     {[0m
[3m│ [1;34m      "column": [0m[3m20,[0m
[3m│ [1;34m      "file": [0m[3m"node:internal/modules/cjs/loader",[0m
[3m│ [1;34m      "function": [0m[3m"Module._compile",[0m
[3m│ [1;34m      "line": [0m[3m1712,[0m
[3m│ [1;34m      "method": [0m[3m"_compile",[0m
[3m│ [1;34m      "native": [0m[3mfalse[0m
[3m│     },[0m
[3m│     {[0m
[3m│ [1;34m      "column": [0m[3m10,[0m
[3m│ [1;34m      "file": [0m[3m"node:internal/modules/cjs/loader",[0m
[3m│ [1;34m      "function": [0m[3m"Object..js",[0m
[3m│ [1;34m      "line": [0m[3m1871,[0m
[3m│ [1;34m      "method": [0m[3m".js",[0m
[3m│ [1;34m      "native": [0m[3mfalse[0m
[3m│     },[0m
[3m│     {[0m
[3m│ [1;34m      "column": [0m[3m32,[0m
[3m│ [1;34m      "file": [0m[3m"node:internal/modules/cjs/loader",[0m
[3m│ [1;34m      "function": [0m[3m"Module.load",[0m
[3m│ [1;34m      "line": [0m[3m1470,[0m
[3m│ [1;34m      "method": [0m[3m"load",[0m
[3m│ [1;34m      "native": [0m[3mfalse[0m
[3m│     },[0m
[3m│     {[0m
[3m│ [1;34m      "column": [0m[3m12,[0m
[3m│ [1;34m      "file": [0m[3m"node:internal/modules/cjs/loader",[0m
[3m│ [1;34m      "function": [0m[3m"Module._load",[0m
[3m│ [1;34m      "line": [0m[3m1290,[0m
[3m│ [1;34m      "method": [0m[3m"_load",[0m
[3m│ [1;34m      "native": [0m[3mfalse[0m
[3m│     },[0m
[3m│     {[0m
[3m│ [1;34m      "column": [0m[3m14,[0m
[3m│ [1;34m      "file": [0m[3m"node:diagnostics_channel",[0m
[3m│ [1;34m      "function": [0m[3m"TracingChannel.traceSync",[0m
[3m│ [1;34m      "line": [0m[3m322,[0m
[3m│ [1;34m      "method": [0m[3m"traceSync",[0m
[3m│ [1;34m      "native": [0m[3mfalse[0m
[3m│     },[0m
[3m│     {[0m
[3m│ [1;34m      "column": [0m[3m24,[0m
[3m│ [1;34m      "file": [0m[3m"node:internal/modules/cjs/loader",[0m
[3m│ [1;34m      "function": [0m[3m"wrapModuleLoad",[0m
[3m│ [1;34m      "line": [0m[3m238,[0m
[3m│ [1;34m      "method": [0m[3mnull,[0m
[3m│ [1;34m      "native": [0m[3mfalse[0m
[3m│     },[0m
[3m│     {[0m
[3m│ [1;34m      "column": [0m[3m12,[0m
[3m│ [1;34m      "file": [0m[3m"node:internal/modules/cjs/loader",[0m
[3m│ [1;34m      "function": [0m[3m"Module.require",[0m
[3m│ [1;34m      "line": [0m[3m1493,[0m
[3m│ [1;34m      "method": [0m[3m"require",[0m
[3m│ [1;34m      "native": [0m[3mfalse[0m
[3m│     },[0m
[3m│     {[0m
[3m│ [1;34m      "column": [0m[3m16,[0m
[3m│ [1;34m      "file": [0m[3m"node:internal/modules/helpers",[0m
[3m│ [1;34m      "function": [0m[3m"require",[0m
[3m│ [1;34m      "line": [0m[3m152,[0m
[3m│ [1;34m      "method": [0m[3mnull,[0m
[3m│ [1;34m      "native": [0m[3mfalse[0m
[3m│     },[0m
[3m│     {[0m
[3m│ [1;34m      "column": [0m[3m24,[0m
[3m│ [1;34m      "file": [0m[3m"/home/stive-junior/2L-Ouest-Services/backend/middleware/index.js",[0m
[3m│ [1;34m      "function": [0m[3mnull,[0m
[3m│ [1;34m      "line": [0m[3m7,[0m
[3m│ [1;34m      "method": [0m[3mnull,[0m
[3m│ [1;34m      "native": [0m[3mfalse[0m
[3m│     }[0m
[3m│   ][0m
[3m│ }[0m
[3m╰─────────────────────────────────────────────────╯[0m
